# lab061

./: .appveyor.yml  .travis.yml  CHANGELOG.md  CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  README.md  for trevis
hello_world_application/: CMakeLists.txt
solver_application/: CMakeLists.txt
